corrección del texto

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -130,7 +130,7 @@
         </p>
         <p>
           Por supuesto, este es un proyecto orgánico que pretende crecer y actualizarse con el tiempo. Y, sabemos que
-          en un futuro muy cercano, muchas más personas se sumaran y participaran en este proyecto Code R11 para
+          en un futuro muy cercano, muchas más personas se sumarán y participarán en este proyecto Code R11 para
           ayudar a otros con su aprendizaje inicial.
         </p>
       </article>
