Corrección de texto con Virgines

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -269,7 +269,7 @@
             universo digital que con mucha práctica sin dudas podrás entender
             y dominar. </p>
           <p>Cuando te enfocas y practicas, el diseño y desarrollo
-            web se vuelve cada vez más divertido, emocionante y muy gratificante. Es dicir, la clave es prácticar y prácticar. Además,
+            web se vuelve cada vez más divertido, emocionante y muy gratificante. Es decir, la clave es practicar y practicar. Además,
             este tipo de aprendizaje te va a permitir desarrollar habilidades
             increíbles, como lógica, abstracción y la capacidad para encontrar
             soluciones creativas para proyectos digitales diversos y
@@ -279,7 +279,7 @@
             Otra buena noticia, es que cada año el nicho para un desarrollador
             web no para de crecer. En cuanto a los ingresos que puedes generar
             con esta profesión, estos son muy bien pagados en términos
-            generales. Es una apuesta segura cuando tienes claro que aprender
+            generales. Es una apuesta segura cuando tienes claro lo que tienes que aprender
             y donde aplicar tus conocimientos.
           </p>
         </div>
