mejoras y actualización del texto

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -305,9 +305,8 @@
             <strong style="color: black; text-transform: uppercase">Practica</strong>
             tu código y adopta buenas prácticas
           </p>
-          <p style="text-align: center">
-            Y
-            <strong style="color: black; text-transform: uppercase">avanza</strong>, no te detengas, conviértete en el
+          <p style="text-align: center">            
+            <strong style="color: black; text-transform: uppercase">Avanza</strong> y no te detengas, conviértete en el
             mejor programador que
             puedes llegar a ser.
           </p>
