Mejoras en el texto de introducción de sitios-web

--- a/sitios-web.html
+++ b/sitios-web.html
@@ -18,8 +18,7 @@
             <aside class="aside-default">
                 <img class="img-50" src="/public/images/sitios-web.png" alt="Sitios Web">
                 <h1>Sitios Web</h1>
-                <p class="informativo">Domina los principales lenguajes que todo desarrollador web necesita saber.
-                    Estos son los sitios web más relavantes para un aprendizaje activo.</p>
+                <p class="informativo">En el vasto mundo del desarrollo web, dominar los principales lenguajes y tecnologías es esencial para cualquier desarrollador. La formación continua y la práctica constante son claves para mantenerse al día con las tendencias y herramientas actuales. A continuación, se presentan algunos de los sitios web más relevantes para un aprendizaje activo y efectivo en el ámbito del desarrollo web.</p>
             </aside>
 
             <section class="section-default">
