modificación del precio de los servicios

--- a/ruta-coder11.html
+++ b/ruta-coder11.html
@@ -20,7 +20,7 @@
         <article class="rutas-items">
           <h2 class="titulo-servicios-h2">Plan de Aprendizaje</h2>
           <h3 class="titulo-servicios-h3">Code R11 2022-2023</h3>
-          <div class="precio">$ 20</div>
+          <div class="precio">Gratis según convenio</div>
           <ul class="lista-flex">
             <li>Plan de Estudio Code R11</li>
             <li>Guía (Mejores Prácticas)</li>
@@ -37,7 +37,7 @@
         <article class="rutas-items">
           <h2 class="titulo-servicios-h2">Aprende a tu Ritmo</h2>
           <h3 class="titulo-servicios-h3">Simulador de Proyectos I</h3>
-          <div class="precio">$ 60</div>
+          <div class="precio">$ 150</div>
           <ul class="lista-flex">
             <li>Plan de Estudio Personalizado</li>
             <li>Guía (Mejores Prácticas)</li>
@@ -54,7 +54,7 @@
         <article class="rutas-items">
           <h2 class="titulo-servicios-h2">Proyectos Grupales</h2>
           <h3 class="titulo-servicios-h3">Simulador de Proyectos II</h3>
-          <div class="precio">$ 120</div>
+          <div class="precio">$ 220</div>
           <ul class="lista-flex">
             <li>Plan de Estudio Code R11</li>
             <li>Guía (Mejores Prácticas)</li>
