Mejoras al texto de la página principal, actualización del pie de página y cambio de tarifas en los servicios

--- a/index.html
+++ b/index.html
@@ -16,19 +16,16 @@
     <header id="menuAppHeader" class="header"></header>
 
     <div class="block-text-center">
-      <h1>LITERAL CODE R11</h1>
-      <h2>Mapa de Aprendizaje para el Desarrollador Web</h2>
-      <h2>Enfócate, practica y avanza</h2>
+      <h1>LITERAL CODE R11: Desbloquea tu Potencial Web </h1>
+      <h2>Tu Mapa de Aprendizaje para Dominar el Desarrollo Web</h2>
+      <h2>Enfócate, Practica y Avanza</h2>
     </div>
 
     <main class="container">
       <aside class="aside-default">
-        <h1>APRENDE DESARROLLO WEB</h1>
+        <h2>Empieza tu Viaje en el Desarrollo Web</h2>
         <p class="normal">
-          Bienvenido a <strong>CODE R11</strong>, tu mapa de aprendizaje
-          activo para dominar el diseño y desarrollo web front-end. Un proyecto enfocado
-          en el ecosistema y gran potencial de JavaScript como pilar
-          fundamental para tu aprendizaje.
+          ¡Bienvenido a <strong>Literal Code R11</strong>! Aquí encontrarás tu mapa de aprendizaje activo para dominar el diseño y desarrollo web front-end. Nuestro proyecto está enfocado en el poderoso ecosistema de JavaScript, el pilar fundamental que te ayudará a construir una base sólida para tu aprendizaje. ¡Empieza hoy y desbloquea todo tu potencial!
         </p>
       </aside>
 
@@ -38,20 +35,13 @@
         </article>
         <article>
           <hr class="dividir-con-margen" />
+          <h2>Bienvenido a Literal Code R11: Tu Guía Definitiva para Aprender Desarrollo Web</h2>
           <p>
-            En la web, existe una increíble cantidad de material para tu
-            aprendizaje. Mucha de esta información se encuentra disponible de
-            manera gratuita en Internet, pero ¿Sabes dónde buscar? Es por ello
-            que el equipo de CODE R11 se ha tomado la tarea de recopilar,
-            categorizar y organizar toda esta valiosa información.
+            La web está llena de recursos increíbles para aprender desarrollo web, pero encontrar lo mejor puede ser todo un reto, ¿verdad? Aquí es donde entra LiteralCodeR11. Hemos reunido, categorizado y organizado los mejores materiales para ti, todo en un solo lugar.
           </p>
+          <h3>Literal Code R11 es tu centro de aprendizaje activo</h3>
           <p>
-            Es por ello que CODE R11 es tu centro de control para el
-            aprendizaje activo para que desarrolles tus habilidades como
-            programador con la mejor información oficial y todo de primera
-            mano. Sabemos muy bien que con la práctica, la dedicación y estos
-            cursos oficiales, sin duda alguna, te vas a convertir en un
-            excelente Desarrollador Web.
+            Aquí, te ayudaremos a desarrollar tus habilidades de programación con la mejor información oficial, directamente de las fuentes más confiables. Con práctica, dedicación y una ruta a tu medida, te convertirás en un excelente desarrollador web.
           </p>
         </article>
       </section>
@@ -62,27 +52,19 @@
         <div class="block-text block-columns">
           <h2 class="block-columns-title">ENFÓCATE, PRACTICA Y AVANZA</h2>
           <p>
-            El proyecto CODE R11, nace con el objetivo de mostrarte el camino
-            más corto que debes recorrer para reducir la curva de aprendizaje.
-            Todo esto, mientras que adoptas buenas prácticas y enfocas tu
-            aprendizaje a una ruta predeterminada. Es un mapa de aprendizaje
-            para desarrolladores web.
+            Literal Code R11 nació para guiarte por el camino más corto y efectivo, reduciendo la curva de aprendizaje mientras adoptas buenas prácticas y sigues una ruta de aprendizaje clara y predeterminada. Este es tu mapa de aprendizaje para convertirte en un desarrollador web de primera.
           </p>
           <p>
-            Hoy en día, tanto el diseño como el desarrollo de aplicaciones web
-            profesional giran en torno al lenguaje de programación de
-            JavaScript. Es por ello, que tu primer gran paso es iniciar con el
-            dominio de los tres pilares básicos: HTML, CSS y JavaScript.
+            <strong>Empieza con los Fundamentos:</strong> El desarrollo web profesional se basa en JavaScript, así que tu primer gran paso es dominar los tres pilares básicos: <strong>HTML, CSS y JavaScript</strong>.
           </p>
           <p>
-            Esta base te preparará para mejorar, potenciar tus habilidades y
-            seguir con el siguiente nivel: el <b>Desarrollo Web Front-end</b>.
-            Con herramientas como Node.js y librerías como React, podrás crear
-            interfaces de usuario poderosas. Y todo esto mientras utilizas
-            Next.js, un marco de desarrollo profesional, dinámico y completo.
-            Finalmente, completa tu ciclo de aprendizaje, con una ruta que te
-            guiará hasta lo mejor del <b>Desarrollo Web Back-end</b> y todo su
-            gran potencial.
+            <strong>Avanza al Siguiente Nivel:</strong> Con una base sólida, estarás listo para mejorar y potenciar tus habilidades en el desarrollo web front-end. Utiliza herramientas como <strong>Node.js</strong> y librerías como <strong>React</strong> para crear interfaces de usuario impresionantes. Y con <strong>Next.js</strong>, un marco de desarrollo profesional, dinámico y completo, llevarás tus habilidades al siguiente nivel.
+          </p>
+          <p>          
+            <strong >Completa tu Ciclo de Aprendizaje:</strong> Finalmente, tu ruta te llevará al emocionante mundo del desarrollo web back-end, desbloqueando todo su potencial.
+          </p>
+          <p>
+            <strong>¡Únete a Literal Code R11 y comienza tu viaje hoy!</strong> Explora nuestros recursos, comienza con el curso de HTML si eres nuevo en el desarrollo web front-end, y aprovecha nuestro programa de mentoría para una ruta de aprendizaje personalizada.
           </p>
         </div>
         <div class="block-image">
