--- a/ruta-coder11.html
+++ b/ruta-coder11.html
@@ -15,7 +15,7 @@
     <header id="menuAppHeader" class="header"></header>
 
     <main class="section-centrar">
-      <h1>Fundamentos del Desarrollo Web 2022-2023</h1>
+      <h1>Fundamentos del Desarrollo Web 2024</h1>
       <section class="rutas">
         <article class="rutas-items">
           <h2 class="titulo-servicios-h2">Plan de Aprendizaje</h2>
