Mejoras del Texto en la página principal

--- a/index.html
+++ b/index.html
@@ -75,17 +75,16 @@
 
     <div class="block-text-center">
       <div class="resaltar-texto">
-        <h2><strong>1. ENFÓCATE</strong><br />
-          ... en aprender y dominar los fundamentos del diseño y desarrollo web
+        <h2><strong>1. ENFÓCATE en los Fundamentos</strong><br />
+          ... en aprender y dominar los pilares del diseño y desarrollo web: HTML, CSS y JavaScript. 
         </h2>
         <h2>
-          <strong>2. PRACTICA</strong><br />
-          ... tu código y adopta buenas prácticas
+          <strong>2. PRACTICA tu Código</strong><br />
+          ... escribiendo código todos los días y adoptando buenas prácticas para mejorar continuamente.
         </h2>
         <h2>
-          <strong>3. AVANZA</strong><br />
-          ...no te detengas, conviértete en el mejor programador que tú puedes
-          llegar a ser.
+          <strong>3. AVANZA sin Detenerte</strong><br />
+          ... sigue aprendiendo y mejorando para convertirte en el mejor programador que puedes ser.
         </h2>
       </div>
     </div>
