Mejoras del texto: Unificar título y párrafo para mejorar la presentación del párrafo que indica que es una ruta a tu medida

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
           <p>
             La web está llena de recursos increíbles para aprender desarrollo web, pero encontrar lo mejor puede ser todo un reto, ¿verdad? Aquí es donde entra LiteralCodeR11. Hemos reunido, categorizado y organizado los mejores materiales para ti, todo en un solo lugar.
           </p>
-          <h3>Literal Code R11 es tu centro de aprendizaje activo</h3>
           <p>
-            Aquí, te ayudaremos a desarrollar tus habilidades de programación con la mejor información oficial, directamente de las fuentes más confiables. Con práctica, dedicación y una ruta a tu medida, te convertirás en un excelente desarrollador web.
+            <strong>Literal Code R11 es tu centro de aprendizaje activo:</strong> Aquí, te ayudaremos a desarrollar tus habilidades de programación con la mejor información oficial, directamente de las fuentes más confiables. Con práctica, dedicación y una ruta a tu medida, te convertirás en un excelente desarrollador web.
           </p>
         </article>
       </section>
