mejora del texto Desarrollo Web Front-End para la página de inicio

--- a/index.html
+++ b/index.html
@@ -106,37 +106,30 @@
         <div class="block-text">
           <h2>FUNDAMENTOS PARA EL DESARROLLO WEB</h2>
           <p>
-            Tu primer gran reto, consiste en dominar los fundamentos del
-            desarrollo web. Nuestra misión es que todo nuevo programador se
-            construya una base sólida con los tres pilares básicos del
-            desarrollo web moderno.
+            Dominar los fundamentos del desarrollo web es tu primer gran reto. Nuestra misión es ayudarte a construir una base sólida con los tres pilares básicos del desarrollo web moderno.
           </p>
-          <h3>Concéntrate primero en Aprender y Practicar la base</h3>
+          <h3>Enfócate en Aprender y Practicar los Fundamentos</h3>
           <ul>
             <li>
-              <b>HTML:</b> Lenguaje de marcado para la estructura y
-              elaboración de páginas web.
+              <b>HTML (HyperText Markup Language):</b> HTML es el lenguaje de marcado utilizado para crear la estructura básica de las páginas web. Es fundamental aprender a usar etiquetas HTML para definir elementos como títulos, párrafos, enlaces, imágenes y formularios. Con una comprensión sólida de HTML, podrás establecer la base sobre la que se construirán todas tus páginas web.
             </li>
             <li>
-              <b>CSS:</b> Lenguaje de diseño gráfico para definir el Estilo y
-              diseño de un documento HTML.
+              <b>CSS (Cascading Style Sheets):</b> CSS es el lenguaje de diseño gráfico utilizado para aplicar estilos y diseños a los documentos HTML. Aprender CSS te permitirá controlar el aspecto visual de tu sitio web, incluyendo colores, fuentes, márgenes, y la disposición de los elementos en la página. Es esencial para crear sitios web visualmente atractivos y responsivos.
             </li>
             <li>
-              <b>JavaScript:</b> Lenguaje de programación de secuencias de
-              comandos
+              <b>JavaScript:</b> JavaScript es un lenguaje de programación que permite añadir interactividad y dinamismo a las páginas web. Con JavaScript, puedes crear funcionalidades como menús desplegables, formularios interactivos, y juegos. Además, JavaScript es clave para trabajar con APIs y realizar cambios en el DOM (Document Object Model) en respuesta a eventos del usuario.
             </li>
           </ul>
 
           <h3>Domina estás Herramientas y Plataformas</h3>
           <ul>
-            <li><b>Visual Studio Code:</b> Editor de código fuente.</li>
-            <li>
-              <b>Git:</b> Sistema de control de versiones para el registro de
-              los cambios de un proyecto.
+            <li><b>Visual Studio Code:</b> Visual Studio Code es un editor de código fuente desarrollado por Microsoft. Es conocido por su flexibilidad y por ofrecer una amplia gama de extensiones que mejoran la productividad. Aprender a usar Visual Studio Code te ayudará a escribir código más eficientemente, con características como autocompletado, resaltado de sintaxis, y control de versiones integrado.
             </li>
             <li>
-              <b>GitHub:</b> Plataforma de Desarrollo para alojar proyectos
-              utilizando el sistema de control de versiones Git.
+              <b>Git:</b> Git es un sistema de control de versiones que permite rastrear los cambios en los archivos de un proyecto. Aprender Git es crucial para gestionar el código de manera efectiva, facilitando la colaboración con otros desarrolladores. Con Git, puedes crear diferentes ramas para trabajar en nuevas funcionalidades, fusionar cambios, y mantener un historial detallado de todas las modificaciones.
+            </li>
+            <li>
+              <b>GitHub:</b> GitHub es una plataforma basada en la web que utiliza Git para el control de versiones. Es ampliamente utilizada para alojar proyectos de software, facilitar la colaboración entre desarrolladores, y compartir código con la comunidad. Dominar GitHub te permitirá contribuir a proyectos de código abierto, trabajar en equipo de manera eficiente, y mostrar tu trabajo a potenciales empleadores o colaboradores.
             </li>
           </ul>
         </div>
@@ -148,48 +141,50 @@
         <div class="block-text">
           <h2>DESARROLLO WEB FRONT-END</h2>
           <p>
-            Aprende a diseñar y estructurar tus páginas web del lado del
-            navegador. Construye aplicaciones y sitios web legibles y fácil de
-            usar para que el usuario pueda tener una experiencia
-            satisfactoria.
+            Aprende a diseñar y estructurar tus páginas web del lado del navegador. Construye aplicaciones y sitios web legibles y fáciles de usar para que los usuarios tengan una experiencia satisfactoria y agradable.
           </p>
+          <h3>Herramientas y Tecnologías Clave</h3>
           <ul>
             <li>
-              <b>Node.JS:</b> Es un entorno de ejecución multiplataforma para
-              la capa del servidor.
+              <b>Node.js:</b> Es un entorno de ejecución multiplataforma para JavaScript que se utiliza principalmente en la capa del servidor. Permite ejecutar código JavaScript fuera del navegador, lo que es útil para construir aplicaciones del lado del servidor como APIs, aplicaciones en tiempo real y tareas automatizadas.
             </li>
             <li>
-              <b>React:</b> Biblioteca JavaScript para crear interfaces de
-              usuario.
+              <b>React:</b> Es un entorno de ejecución multiplataforma para JavaScript que se utiliza principalmente en la capa del servidor. Permite ejecutar código JavaScript fuera del navegador, lo que es útil para construir aplicaciones del lado del servidor como APIs, aplicaciones en tiempo real y tareas automatizadas.
             </li>
             <li>
-              <b>TypeScript:</b> Lenguaje de programación para desarrollar
-              aplicaciones JavaScript que añade tipos estáticos y objetos
-              basados en clases.
+              <b>TypeScript:</b> Es un lenguaje de programación que se basa en JavaScript y añade tipos estáticos y objetos basados en clases. Ayuda a detectar errores durante el desarrollo y mejora la mantenibilidad del código a largo plazo, haciendo que el desarrollo de aplicaciones complejas sea más eficiente y robusto.
             </li>
             <li>
-              <b>SWR:</b> Biblioteca React Hooks para la obtención de datos.
+              <b>SWR:</b> Es una biblioteca de React Hooks para la obtención de datos. Simplifica el manejo de datos asíncronos y la sincronización con el servidor, proporcionando una experiencia de usuario más fluida.
+            </li>
+            <li><b>Chakra UI:</b> Es una biblioteca de componentes para React. Ofrece una colección de componentes accesibles y personalizables, acelerando el desarrollo de interfaces de usuario con un diseño consistente y moderno.
+            </li>          
+            <li>
+              <b>MDX:</b> Permite usar JSX dentro de Markdown. Ideal para escribir contenido de formato largo que necesita componentes interactivos, combinando la simplicidad de Markdown con la potencia de React.
             </li>
             <li>
-              <b>Sass:</b> Lenguaje de hojas de estilo compilado en CSS. Ayuda
-              a mantener bien organizadas las hojas de estilo grandes y
-              facilita compartir el diseño dentro y entre proyectos.
-            </li>
-            <li><b>Chakra UI:</b> Biblioteca de Componentes para React.</li>
-            <li>
-              <b>Remar.JS:</b> Procesador que analiza y compila Markdown.
+              <b>Tailwind CSS:</b> Es un framework CSS que proporciona utilidades predefinidas para construir interfaces. Ofrece una manera rápida y eficiente de crear diseños personalizados utilizando clases utilitarias, evitando la necesidad de escribir CSS personalizado para cada proyecto.
             </li>
             <li>
-              <b>MDX:</b> Permite usar JSX en Markdown, ideal para escribir
-              contenido de formato largo.
+              <b>Jest:</b> Es un marco de pruebas para JavaScript. Facilita la creación y ejecución de pruebas unitarias, garantizando la corrección y estabilidad del código a lo largo del tiempo.
             </li>
             <li>
-              <b>Tailwindcss:</b> Valores predeterminados tipográficos para
-              HTML.
+              <b>Next.js</b> Es un framework para React que permite la generación de sitios estáticos y aplicaciones del lado del servidor (SSR). Proporciona características avanzadas y soporte integrado para muchas funcionalidades, mejorando el rendimiento y la optimización para motores de búsqueda (SEO).
             </li>
             <li>
-              <b>Jest:</b> Marco de prueba para la corrección de cualquier
-              código base de JavaScript.
+              <b>Webpack</b> Es un empaquetador de módulos para JavaScript. Permite optimizar y gestionar los recursos de la aplicación, siendo una herramienta robusta y ampliamente utilizada en la configuración de proyectos front-end.
+            </li>
+            <li>
+              <b>Redux</b> Es una biblioteca para el manejo del estado en aplicaciones JavaScript. Es fundamental para aplicaciones grandes y complejas, proporcionando una manera predecible de gestionar el estado de la aplicación.
+            </li>
+            <li>  
+              <b>ESLint:</b> Es una herramienta de análisis de código estático que encuentra y soluciona problemas en el código JavaScript. Mantiene la calidad del código asegurando que se adhiera a las convenciones y mejores prácticas.
+            </li>
+            <li>
+              <b>Storybook:</b> Es una herramienta para desarrollar componentes de interfaz de usuario en aislamiento. Facilita la creación, prueba y documentación de componentes, mejorando la eficiencia en el desarrollo de interfaces.
+            </li>  
+            <li>
+              <b>Vite:</b> Es un nuevo empaquetador de módulos que ofrece un entorno de desarrollo rápido y eficiente para aplicaciones web modernas. Proporciona una alternativa más rápida y simplificada a Webpack, especialmente para proyectos de nueva creación.
             </li>
           </ul>
         </div>
