mejora del texto Proyecto CODE R11 en la página de inicio

--- a/index.html
+++ b/index.html
@@ -211,22 +211,18 @@
         <div class="block-text">
           <h2>FRAMEWORK Y PLATAFORMA FRONT-END</h2>
           <p>
-            Hoy en día, es mucho más fácil aprender a programar, desarrollar
-            aplicaciones y sitios web con diseños espectaculares. Y todo esto se
-            debe al valioso contenido que se encuentra disponible de manera
-            libre en la Internet. Claro está, esto es posible gracias a una gran
-            comunidad y las diversas empresas tecnológicas que comparten sus
-            cursos y documentación sobre el diseño y desarrollo web. De tal
-            manera, que es posible aprender directamente de la fuente oficial
-            con información de primera mano.
+            Hoy en día, aprender a programar y desarrollar aplicaciones y sitios web con diseños espectaculares es mucho más fácil gracias al abundante contenido disponible gratuitamente en Internet. Este acceso a recursos educativos se debe a una gran comunidad de desarrolladores y a las diversas empresas tecnológicas que comparten cursos y documentación sobre diseño y desarrollo web. Así, es posible aprender directamente de la fuente oficial con información de primera mano.            
           </p>
+          <h3>Nuestra Recomendación de Herramientas y Tecnologías Clave</h3>
           <ul>
-            <li><b>Next.JS:</b> Marco de desarrollo web para React</li>
             <li>
-              <b>Vercel:</b> Plataforma front-end para liberar todo el potencial
-              de Next.js.
+              <b>Next.JS:</b> Next.js es un marco de desarrollo web para React que permite la creación de aplicaciones optimizadas y de alto rendimiento. Ofrece características avanzadas como la generación estática y el renderizado del lado del servidor (SSR), mejorando tanto la experiencia del desarrollador como la del usuario final. Next.js facilita el desarrollo de aplicaciones escalables y optimizadas para SEO, integrando funciones que permiten manejar rutas, pre-renderizar páginas y optimizar la carga de recursos.
+            </li>
+            <li>
+              <b>Vercel:</b> Vercel es una plataforma front-end diseñada para desplegar aplicaciones Next.js de manera eficiente y sin complicaciones. Ofrece un entorno optimizado para desarrolladores, permitiendo integraciones continuas, despliegues instantáneos y un rendimiento de primer nivel. Con Vercel, los desarrolladores pueden enfocarse en construir y mejorar sus aplicaciones mientras la plataforma se encarga de la infraestructura, la escalabilidad y el rendimiento.
             </li>
           </ul>
+          <p>El acceso a recursos educativos de calidad y la disponibilidad de herramientas poderosas como Next.js y Vercel han revolucionado el desarrollo web front-end. Estos avances permiten a los desarrolladores crear aplicaciones y sitios web modernos, eficientes y estéticamente atractivos, facilitando el aprendizaje y la implementación de prácticas de desarrollo de vanguardia.</p>
         </div>
       </article>
     </section>
@@ -236,13 +232,10 @@
         <div class="block-text">
           <h2>UN FUTURO PROFESIONAL CON GRANDES POSIBILIDADES</h2>
           <p>
-            Aprender diseño y desarrollo web es divertido, emocionante y muy
-            gratificante. Además, también desarrollas habilidades increíbles
-            como lógica, abstracción y la capacidad para encontrar soluciones
-            creativas para proyectos diversos y demandantes. Y la buena noticia,
-            es que cada año el nicho para un desarrollador o diseñador web no
-            para de crecer. En cuanto a los ingresos que se pueden generar con
-            esta profesión, estos son muy bien pagados en términos generales.
+            Aprender diseño y desarrollo web es una experiencia divertida, emocionante y muy gratificante. Este campo no solo te permite crear sitios web y aplicaciones atractivas, sino que también te ayuda a desarrollar habilidades esenciales como lógica, abstracción y la capacidad para encontrar soluciones creativas a proyectos diversos y desafiantes.
+          </p>
+          <p>
+            La buena noticia es que cada año la demanda de desarrolladores y diseñadores web sigue creciendo. El mercado laboral para estos profesionales es amplio y en constante expansión, ofreciendo numerosas oportunidades de empleo en diversas industrias. Además, los ingresos que se pueden generar en esta profesión son competitivos y suelen estar bien remunerados en comparación con otras áreas. Esto hace del diseño y desarrollo web una opción atractiva para quienes buscan una carrera con estabilidad y potencial de crecimiento continuo.
           </p>
         </div>
         <div class="block-image">
@@ -272,25 +265,16 @@
             APRENDIZAJE ACTIVO
           </h2>
           <p class="lead">
-            El proyecto CODE R11, nace con el objetivo de mostrarte el camino
-            más corto que debes recorrer para reducir la curva de aprendizaje.</p>
-          <p>Todo esto, mientras que adoptas buenas prácticas y enfocas tu
-            aprendizaje a una ruta predeterminada.</p>
-          <p>Es decir, te ofrecemos una ruta estructurada y bien definida de los lenguajes, herramientas y
-            tecnologías que debes usar en cada paso. La meta consiste en que te
-            conviertas en un desarrollador web profesional en el menor tiempo
-            posible. Y sobre todo, que logres una base sólida con el
-            conocimiento de: HTML, CSS y JavaScript.
+            El proyecto CODE R11 nace con el objetivo de mostrarte el camino más corto para reducir la curva de aprendizaje en desarrollo web.
           </p>
           <p>
-            Es por ello que en CODE R11 hemos organizado toda la información
-            necesaria para tu aprendizaje activo. Y estamos orgullosos de que
-            esta plataforma te sirva de guía para tu aprendizaje.
+            Adoptando buenas prácticas y siguiendo una ruta predeterminada, te ofrecemos una estructura clara y bien definida sobre los lenguajes, herramientas y tecnologías que debes usar en cada paso. Nuestra meta es que te conviertas en un desarrollador web profesional en el menor tiempo posible, asegurando una base sólida en HTML, CSS y JavaScript.
           </p>
           <p>
-            Nuestra visión es hacer que el aprendizaje web en Latinoamérica se
-            convierta en un proceso divertido, desafiante y más colaborativo.
-            Así que, enfócate, practica y avanza con CODE R11.
+            En CODE R11 hemos organizado toda la información necesaria para tu aprendizaje activo, y estamos orgullosos de que esta plataforma te sirva de guía.
+          </p>
+          <p>
+            Nuestra visión es hacer que el aprendizaje web sea un proceso divertido, desafiante y colaborativo. Enfócate, practica y avanza con CODE R11.
           </p>
         </div>
       </article>
