Mejora del Texto de introducción para la página de documentación

--- a/documentacion.html
+++ b/documentacion.html
@@ -22,9 +22,7 @@
           />
           <h1>Documentacion</h1>
           <p class="informativo">
-            Información técnica y cursos para una comprensión profunda de las
-            especificaciones y referencias más relevantes para los desarrolladores
-            web. 
+            Recursos esenciales para el desarrollo web. Aquí encontrarás tutoriales, guías y documentación detallada para dominar HTML, CSS y JavaScript, junto con herramientas clave como Visual Studio Code y GitHub. Este compendio incluye desde fundamentos básicos hasta conceptos avanzados, proporcionando todo lo necesario para convertirte en un experto en desarrollo web front-end. ¡Explora estos recursos y comienza tu viaje hacia el dominio del desarrollo web hoy mismo!
           </p>
         </aside>
 
