Mejoras al texto introductorio para la categoría de libros

--- a/libros.html
+++ b/libros.html
@@ -22,7 +22,7 @@
           />
           <h1>Libros</h1>
           <p class="informativo">
-            Selección de libros para aprender desarrollo web.
+            Bienvenido a nuestra selección de libros esenciales para aprender desarrollo web front-end. Aquí encontrarás una variedad de recursos que abarcan desde los fundamentos básicos hasta temas avanzados, diseñados para ayudarte a dominar HTML, CSS y JavaScript. Además, estos libros ofrecen guías detalladas sobre herramientas y frameworks importantes en el desarrollo web. Cada libro está estructurado para proporcionar un aprendizaje claro y progresivo, permitiéndote avanzar a tu propio ritmo. ¡Sumérgete en estos valiosos recursos y comienza tu viaje hacia el dominio del desarrollo web front-end hoy mismo!
           </p>
         </aside>
 
