Mejoras al texto introductorio de la categoría de Herramientas

--- a/herramientas.html
+++ b/herramientas.html
@@ -18,7 +18,9 @@
       <aside class="aside-default">
         <img class="img-50" src="./public/images/herramientasWebDeveloper.png" alt="herramientas" />
         <h1>Herramientas</h1>
-        <p>Herramientas tecnológicas básicas para mejorar tu desempeño como diseñador y programador web.</p>
+        <p>
+          Bienvenido a nuestra categoría de herramientas esenciales para el desarrollo web front-end. Aquí encontrarás una selección de recursos tecnológicos diseñados para mejorar tu desempeño como diseñador y programador web. Desde el potente editor de código Visual Studio Code y el entorno de ejecución Node.js, hasta recursos de diseño como CSS-Tricks y Google Fonts, estas herramientas cubren una amplia gama de necesidades en el desarrollo web. Además, encontrarás herramientas gratuitas como Small Dev Tools y utilidades específicas como Fluid Type Scale. Cada recurso está pensado para ser accesible y fácil de usar, permitiéndote optimizar tu flujo de trabajo y mejorar tus habilidades de manera efectiva. ¡Explora estas herramientas y lleva tu desarrollo web al siguiente nivel!
+        </p>
         <ul>
           <li><a href="#tecnologia">Tecnología</a></li>
           <li><a href="#ingles">Inglés para Desarrolladores web</a></li>
